@@ -4,7 +4,7 @@
   LzmaDecode.c
   LZMA Decoder (optimized for Speed version)
   
-  LZMA SDK 4.40 Copyright (c) 1999-2006 Igor Pavlov (2006-05-01)
+  LZMA SDK 4.32 Copyright (c) 1999-2005 Igor Pavlov (2005-12-09)
   http://www.7-zip.org/
 
   LZMA SDK is licensed under two licenses:
@@ -23,7 +23,9 @@
 
 #include "LzmaDecode.h"
 
-#define Byte lzmaByte
+#ifndef Byte
+#define Byte unsigned char
+#endif
 
 #define kNumTopBits 24
 #define kTopValue ((UInt32)1 << kNumTopBits)
@@ -124,15 +126,17 @@ StopCompilingDueBUG
 int LzmaDecodeProperties(CLzmaProperties *propsRes, const unsigned char *propsData, int size)
 {
   unsigned char prop0;
-  if (size < LZMA_PROPERTIES_SIZE)
+  if (size < (int)LZMA_PROPERTIES_SIZE)
     return LZMA_RESULT_DATA_ERROR;
   prop0 = propsData[0];
-  if (prop0 >= (9 * 5 * 5))
+  if (prop0 >= (unsigned char)(9 * 5 * 5))
     return LZMA_RESULT_DATA_ERROR;
   {
-    for (propsRes->pb = 0; prop0 >= (9 * 5); propsRes->pb++, prop0 -= (9 * 5));
-    for (propsRes->lp = 0; prop0 >= 9; propsRes->lp++, prop0 -= 9);
-    propsRes->lc = prop0;
+    for (propsRes->pb = 0; prop0 >= (unsigned char)(9 * 5); propsRes->pb++, prop0 -= (unsigned char)(9 * 5))
+	{};
+    for (propsRes->lp = 0; prop0 >= (unsigned char)9; propsRes->lp++, prop0 -= (unsigned char)9)
+	{};
+    propsRes->lc = (int) prop0;
     /*
     unsigned char remainder = (unsigned char)(prop0 / 9);
     propsRes->lc = prop0 % 9;
@@ -143,10 +147,10 @@ int LzmaDecodeProperties(CLzmaProperties *propsRes, const unsigned char *propsDa
 
 #ifdef _LZMA_OUT_READ
   {
-    unsigned int i; /* This isn't unsigned in original sdk, what gives?? */
+    unsigned int i;
     propsRes->DictionarySize = 0;
     for (i = 0; i < 4; i++)
-      propsRes->DictionarySize += (UInt32)(propsData[1 + i]) << (i * 8);
+      propsRes->DictionarySize += (UInt32)(propsData[1 + i]) << (i * 8U);
     if (propsRes->DictionarySize == 0)
       propsRes->DictionarySize = 1;
   }
@@ -166,7 +170,7 @@ int LzmaDecode(CLzmaDecoderState *vs,
 {
   CProb *p = vs->Probs;
   SizeT nowPos = 0;
-  Byte previousByte = 0;
+  Byte previousByte = '\0';
   UInt32 posStateMask = (1 << (vs->Properties.pb)) - 1;
   UInt32 literalPosMask = (1 << (vs->Properties.lp)) - 1;
   int lc = vs->Properties.lc;
@@ -220,7 +224,7 @@ int LzmaDecode(CLzmaDecoderState *vs,
       globalPos = 0;
       distanceLimit = 0;
       dictionaryPos = 0;
-      dictionary[dictionarySize - 1] = 0;
+      dictionary[dictionarySize - 1] = (Byte)0;
 #ifdef _LZMA_IN_CB
       RC_INIT;
 #else
@@ -298,7 +302,7 @@ int LzmaDecode(CLzmaDecoderState *vs,
         + globalPos
 #endif
         )
-        & literalPosMask) << lc) + (previousByte >> (8 - lc))));
+        & literalPosMask) << lc) + (UInt32)(previousByte >> (8 - lc))));
 
       if (state >= kNumLitStates)
       {
@@ -307,7 +311,7 @@ int LzmaDecode(CLzmaDecoderState *vs,
         UInt32 pos = dictionaryPos - rep0;
         if (pos >= dictionarySize)
           pos += dictionarySize;
-        matchByte = dictionary[pos];
+        matchByte = (int) dictionary[pos];
 #else
         matchByte = outStream[nowPos - rep0];
 #endif
