@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - rse: step back to the LZMA SDK 4.32 (which is identical to LZMA SDK 4.57), but with the rpm5.org cleanups still applied
     - rse: resolve type conflict between Zlib and Lzma after upgrade to latest LZMA SDK 4.40
     - jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
     - jbj: fix: segfault from clobbering RPMMIRE_STRCMP mode w platform string.
